<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('feedback_joins', function (Blueprint $table) {
            $table->uuid('id')->primary();
            $table->foreignUuid('feedback_id')->constrained('feedbacks')->cascadeOnDelete();
            $table->foreignUuid('user_id')->constrained()->cascadeOnDelete();
            $table->timestamps();

            $table->unique(['feedback_id', 'user_id']);
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('feedback_joins');
    }
};
